# openGauss-server

./: CMakeLists.txt  README.en.md  README.md  configure
cmake/src/: build_function.cmake
cmake/src/config-in/: pg_config.h.in  pg_config_nocheck.h.in
config/: config.guess
contrib/auto_explain/: auto_explain.cpp
contrib/fuzzystrmatch/: fuzzystrmatch.cpp
contrib/gms_i18n/: CMakeLists.txt  Makefile
contrib/gms_utility/: gms_utility.cpp  gms_utility.h
contrib/gms_utility/expected/: gms_utility.out
contrib/gms_utility/sql/: gms_utility.sql
contrib/gms_xmlgen/: gms_xmlgen.cpp
contrib/log_fdw/: log_fdw.cpp
contrib/nputurbo/: CMakeLists.txt  matmul_custom.cpp  matmulmgr.cpp  matmulmgr.h
contrib/nputurbo/cmake/: npu_lib.cmake
contrib/pagehack/: pagehack.cpp
contrib/pg_standby/: pg_standby.cpp
contrib/shark/: CMakeLists.txt  Makefile  cmake.sh  datefuncs.cpp  parallel_schedule  shark.control  shark.cpp  shark.h  varlena.cpp
contrib/shark/expected/: functions.out  functions2.out  identity.out  test_ddl.out  test_ddl_and_dml.out  test_ddl_and_function.out  test_sysviews.out  test_sysviews2.out
contrib/shark/input/: gs_dump_d_nvarchar2_max.source  test_sqlvariant.source  varbinary.source
contrib/shark/output/: gs_dump_d_nvarchar2_max.source  test_sqlvariant.source  varbinary.source
docker/dockerfiles/: opengauss_docker_publisher.py
docker/upgrade/: upgrade_common.sh
liteom/: upgrade_common.sh
src/: get_PlatForm_str.sh
src/gausskernel/: CMakeLists.txt  Makefile
src/include/: miscadmin.h  pg_config_manual.h  pgstat.h
(+520 files in other folders)
